--- a/client/SmartGarden/src/app/login/login.component.html
+++ b/client/SmartGarden/src/app/login/login.component.html
@@ -1,9 +1,30 @@
-<div>
-  <p>username</p>
-  <input type="text" [(ngModel)]="username">
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">Bejelentkezés</div>
+        <div class="card-body">
+          <div class="form-group row">
+            <label for="username" class="col-md-4 col-form-label text-md-right">Felhasználónév:</label>
+            <div class="col-md-6">
+              <input id="username" type="text" class="form-control required autofocus" [(ngModel)]="username">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="password" class="col-md-4 col-form-label text-md-right">Jelszó:</label>
+            <div class="col-md-6">
+              <input id="password" type="password" class="form-control required autofocus" [(ngModel)]="password">
+            </div>
+          </div>
+          <div class="form-group row mb-0">
+            <div class="col-md-8 offset-md-4">
+              <button type="submit" class="btn btn-primary" (click)="onClickLogin()">
+                Bejelentkezés
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-<div>
-  <p>password</p>
-  <input type="password" [(ngModel)]="password">
-</div>
-<button [routerLink]="['/garden']" (click)="onClickLogin()">Bejelentkezés</button>
