--- a/client/SmartGarden/src/app/login/login.component.html
+++ b/client/SmartGarden/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-center"></p-toast>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-md-8">
