add, remove function to gardeners

--- a/client/SmartGarden/src/app/menu/menu.component.html
+++ b/client/SmartGarden/src/app/menu/menu.component.html
@@ -18,6 +18,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/create">Kert létrehozása</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/gardener">Kertészek kezelése</a>
+      </li>
     </ul>
     <button [hidden]="!user" class="btn my-2 my-lg-0 ml-auto btn btn-link" (click)="logout()">Kijelentkezés</button>
 
