--- a/client/SmartGarden/src/styles.css
+++ b/client/SmartGarden/src/styles.css
@@ -3,3 +3,9 @@
 @import '../node_modules/primeng/resources/themes/nova-light/theme.css';
 @import '../node_modules/primeicons/primeicons.css';
 
+/*.ui-dropdown {
+  width: 100% !important;
+}*/
+.gardener-dropdown {
+  width: 100%;
+}
