--- a/client/SmartGarden/src/app/garden/garden.component.html
+++ b/client/SmartGarden/src/app/garden/garden.component.html
@@ -4,7 +4,48 @@
               (onChange)="getValue(selectedGardenId)">
   </p-dropdown>
 </div>
+
 <br>
+
+<div class="container" [hidden]="!isCanvasVisible">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <div class="form-group row">
+            <label for="heating" class="col-md-4 col-form-label text-md-right">Hőmérséklet:</label>
+            <div class="col-md-8">
+              <p-dropdown styleClass="gardener-dropdown-80" class="col-md-8" id="heating" [options]="heatOptions"
+                          [(ngModel)]="gardenHeating"
+              >
+              </p-dropdown>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="watering" class="col-md-4 col-form-label text-md-right">Öntözés:</label>
+            <div class="col-md-8">
+              <p-dropdown styleClass="gardener-dropdown-80" class="col-md-8" id="watering" [options]="waterOptions"
+                          [(ngModel)]="gardenWatering"
+              >
+              </p-dropdown>
+            </div>
+          </div>
+          <div class="form-group row mb-0">
+            <div class="col-md-8 offset-md-4">
+              <button type="submit" class="btn btn-primary" (click)="onClickGardenControl()">
+                Beállítás
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<br>
+
+
 <div [hidden]="!isCanvasVisible" style="width: 100%; text-align:center;">
   <canvas style=" display: inline;" #canvas id="canvas" width="500" height="500" (click)="onClickCanvas($event)"
   ></canvas>
@@ -100,4 +141,7 @@
     </p-footer>
   </p-dialog>
 </div>
+
+
+
 
