--- a/client/SmartGarden/src/styles.css
+++ b/client/SmartGarden/src/styles.css
@@ -11,6 +11,14 @@
   width: 80%;
 }
 
+.gardener-dropdown-45 {
+  width: 45.5%;
+}
+
+.gardener-dropdown-30 {
+  width: 30%;
+}
+
 .ui-dialog {
   width: 70%;
 }
